; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_dir_iterate.c_ext2fs_dir_iterate.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_dir_iterate.c_ext2fs_dir_iterate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext2_dir_entry = type opaque
%struct.xlate = type { i32 (%struct.ext2_dir_entry.0*, i32, i32, i8*, i8*)*, i8* }
%struct.ext2_dir_entry.0 = type opaque

@xlate_func = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2fs_dir_iterate(i32 %0, i32 %1, i32 %2, i8* %3, i32 (%struct.ext2_dir_entry*, i32, i32, i8*, i8*)* %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32 (%struct.ext2_dir_entry*, i32, i32, i8*, i8*)*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca %struct.xlate, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32 (%struct.ext2_dir_entry*, i32, i32, i8*, i8*)* %4, i32 (%struct.ext2_dir_entry*, i32, i32, i8*, i8*)** %11, align 8
  store i8* %5, i8** %12, align 8
  %14 = load i8*, i8** %12, align 8
  %15 = getelementptr inbounds %struct.xlate, %struct.xlate* %13, i32 0, i32 1
  store i8* %14, i8** %15, align 8
  %16 = load i32 (%struct.ext2_dir_entry*, i32, i32, i8*, i8*)*, i32 (%struct.ext2_dir_entry*, i32, i32, i8*, i8*)** %11, align 8
  %17 = bitcast i32 (%struct.ext2_dir_entry*, i32, i32, i8*, i8*)* %16 to i32 (%struct.ext2_dir_entry.0*, i32, i32, i8*, i8*)*
  %18 = getelementptr inbounds %struct.xlate, %struct.xlate* %13, i32 0, i32 0
  store i32 (%struct.ext2_dir_entry.0*, i32, i32, i8*, i8*)* %17, i32 (%struct.ext2_dir_entry.0*, i32, i32, i8*, i8*)** %18, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %9, align 4
  %22 = load i8*, i8** %10, align 8
  %23 = load i32, i32* @xlate_func, align 4
  %24 = call i32 @ext2fs_dir_iterate2(i32 %19, i32 %20, i32 %21, i8* %22, i32 %23, %struct.xlate* %13)
  ret i32 %24
}

declare dso_local i32 @ext2fs_dir_iterate2(i32, i32, i32, i8*, i32, %struct.xlate*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
